# a-raft-core

./: BUILDING.md  CMakeLists.txt  Dockerfile  GAPS.md  NOTICE  PHASES.md  README.md  build.sh  scaffold.yaml
examples/multi-raft/: CMakeLists.txt  build.sh
examples/multi-raft/data/node_300/: wal_grp0.index
examples/multi-raft/src/: client.c  main.c  server.c
include/a-raft-core/: raft.h
include/a-raft-library/: araft.h  awal.h  raft.h  raft_codec.h  raft_core.h  raft_io.h  raft_server.h  raft_wal.h
src/: araft.c  awal.c  raft_codec.c  raft_core.c  raft_election.c  raft_internal.h  raft_io.c  raft_log.c  raft_membership.c  raft_read_index.c  raft_replication.c  raft_server.c  raft_snapshot.c  raft_wal.c
tests/: CMakeLists.txt  build.sh
tests/src/: test_awal.c  test_raft_api.c  test_raft_chaos.c  test_raft_cluster.c  test_raft_codec.c  test_raft_core.c  test_raft_election.c  test_raft_fuzz.c  test_raft_io.c  test_raft_membership.c  test_raft_pump.c  test_raft_read_index.c  test_raft_replication.c  test_raft_snapshot.c  test_raft_wal.c
